api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapi-deployment
  labels:
    app : todoapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todoapi
  template:
    metadata:
      labels:
        app: todoapi
    spec:
      containers:
      - name: todoapi
        image: kdkanishka/todo-api:1.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: todoapi-service
spec:
  selector:
    app: todoapi
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
