backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todobackend-deployment
  labels:
    app : todobackend
spec:
  # replicas: 3
  selector:
    matchLabels:
      app: todobackend
  template:
    metadata:
      labels:
        app: todobackend
    spec:
      containers:
      - name: todobackend
        image: kdkanishka/todo-service:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: todobackend-service
spec:
  selector:
    app: todobackend
  ports:
  - port: 18080
    protocol: TCP
    targetPort: 8080
