todoapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapi-ingress
  labels:
    name: todoapi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "todoapi.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: todoapi-service
            port: 
              number: 9090
